<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>dev.ikm</groupId>
    <artifactId>aperture</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>aperture</name>
    <description>Demo project for Spring Boot</description>
    <properties>
        <!-- IKE Properties -->
        <tinkar-core.groupId>dev.ikm.tinkar</tinkar-core.groupId>
        <tinkar-core.version>1.126.0</tinkar-core.version>
        <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
        <eclipse-collections-api.version>12.0.0.M3-r3</eclipse-collections-api.version>

        <!-- Apache Jena -->
        <jena-core.version>6.1.0</jena-core.version>
        <java.version>25</java.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Apache Jena -->
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-core</artifactId>
                <version>${jena-core.version}</version>
            </dependency>

            <!-- IKE Dependencies -->
            <dependency>
                <groupId>${tinkar-core.groupId}</groupId>
                <artifactId>data-spinedarray-provider</artifactId>
                <version>${tinkar-core.version}</version>
            </dependency>
            <dependency>
                <groupId>${tinkar-core.groupId}</groupId>
                <artifactId>entity-provider</artifactId>
                <version>${tinkar-core.version}</version>
            </dependency>
            <dependency>
                <groupId>${tinkar-core.groupId}</groupId>
                <artifactId>executor-provider</artifactId>
                <version>${tinkar-core.version}</version>
            </dependency>
            <dependency>
                <groupId>${tinkar-core.groupId}</groupId>
                <artifactId>search-provider</artifactId>
                <version>${tinkar-core.version}</version>
            </dependency>
            <dependency>
                <groupId>${tinkar-core.groupId}</groupId>
                <artifactId>terms</artifactId>
                <version>${tinkar-core.version}</version>
            </dependency>

            <!-- JPMS Libraries -->
            <dependency>
                <groupId>${tinkar-jpms-deps.groupId}</groupId>
                <artifactId>eclipse-collections-api</artifactId>
                <version>${eclipse-collections-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- Spring Dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- IKE Dependencies -->
        <dependency>
            <groupId>${tinkar-core.groupId}</groupId>
            <artifactId>data-spinedarray-provider</artifactId>
        </dependency>
        <dependency>
            <groupId>${tinkar-core.groupId}</groupId>
            <artifactId>entity-provider</artifactId>
        </dependency>
        <dependency>
            <groupId>${tinkar-core.groupId}</groupId>
            <artifactId>executor-provider</artifactId>
        </dependency>
        <dependency>
            <groupId>${tinkar-core.groupId}</groupId>
            <artifactId>search-provider</artifactId>
        </dependency>
        <dependency>
            <groupId>${tinkar-core.groupId}</groupId>
            <artifactId>terms</artifactId>
        </dependency>

        <!-- JPMS Libraries -->
        <dependency>
            <groupId>${tinkar-jpms-deps.groupId}</groupId>
            <artifactId>eclipse-collections-api</artifactId>
        </dependency>

        <!-- Jena Dependencies -->
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-core</artifactId>
        </dependency>

        <!-- Logging Dependencies -->

        <!-- Test Dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <jvmArguments>--enable-preview</jvmArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off --enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <dependencies>
                    <dependency>
                        <groupId>me.fabriciorby</groupId>
                        <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
                        <version>1.3.0</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <argLine>--enable-preview --enable-native-access=ALL-UNNAMED</argLine>
                    <statelessTestsetInfoReporter
                            implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
                        <disable>false</disable>
                        <printStacktraceOnError>true</printStacktraceOnError>
                        <printStacktraceOnFailure>true</printStacktraceOnFailure>
                        <theme>UNICODE</theme>
                    </statelessTestsetInfoReporter>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
